# temple_run

./: .gitattributes  .gitignore  CMakeLists.txt
assets/shaders/: default.frag  default.vert  shadow.frag  shadow.vert
cmake/: assimp.cmake  glm.cmake  opengl.cmake  sdl.cmake
include/: audio.hpp  camera.hpp  engine.hpp  input.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  pipeline.hpp  texture.hpp  time.hpp  transform.hpp  window.hpp
src/: main.cpp  pch.hpp
